--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
             <h1 class="section-title">Many Good Reasons to stick Around</h1>
             <ul class="key-feature__list">
                 <li class="key-feature">
-                    <div>
+                    <div class="key-feature__image">
 
                     </div>
                     <p class="key-feature__description">3,857,000 Trusting Customers</p>
                 </li>
                 <li class="key-feature">
-                    <div>
+                    <div class="key-feature__image">
 
                     </div>
                     <p class="key-feature__description">99.999% Uptime Guarantee</p>
                 </li>
                 <li class="key-feature">
-                    <div>
+                    <div class="key-feature__image">
 
                     </div>
                     <p class="key-feature__description">Lightning Fast CDN</p>
@@ -106,6 +106,18 @@
             </ul>
         </section>
     </main>
+    <footer class="main-footer">
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Support</a>
+                </li>
+                <li>
+                    <a href="#">Terms of Use</a>
+                </li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 </html>
