--- a/packages/index.html
+++ b/packages/index.html
@@ -12,9 +12,12 @@
 </head>
 
 <body>
+    <div class="background"></div>
     <header class="main-header">
         <div>
-            <a href="../index.html" class="main-header__brand">uHost</a>
+            <a href="../index.html" class="main-header__brand">
+                <img src="../images/uhost-icon.png" alt="uHost Your favourite Hosting Company">
+            </a>
         </div>
         <nav class="main-nav">
             <ul class="main-nav__items">
@@ -34,6 +37,7 @@
         <section class="package" id="plus">
             <a href="#">
                 <h1 class="package__title">Our PLUS Plan</h1>
+                <h2 class="package__badge">RECOMMENDED</h2>
                 <h2 class="package__subtitle">The most Popular choice of our customers.</h2>
                 <p class="package__info">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
                         are always available!</p>
